<resources>
    <string name="app_name">RegistrationForm</string>
    <string name="signText">Prijavite se na Google račun i iskoristite sve
        mogućnosti Googleovih usluga koje koristite. Vaš račun pomaže vam učiniti
        više prilagođavajući vaš doživljaj na Googleu i nudeći vam jednostavan pristup
        vašim najvažnijim podacima s bilo kojeg mjesta</string>
    <string name="pickImage">Pick image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reEnterPassword">Re-enter Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="description">Pitucre of registratrion</string>
    <string name="country">Country</string>
    <string name="registration">Registration</string>
    <string name="search">Search</string>
    <string name="page_title">Registartion</string>
    <string name="more">List</string>
    <string name="PeopleName">People name</string>
    <string name="title_activity_list_of_people_acitivity">ListOfPeopleAcitivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>